# Arbres_Projet

./: README.txt  dune-project
lib/: abr.ml  arbre_binaire.ml  dune  graphviz.ml  remy_optimal.ml  remy_prototype.ml
resultats/: plot.py  results.csv
test/: dune  experiment.ml  test_abr.ml  test_remy_opt.ml  test_remy_prot.ml
